[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openmeteo-requests>=1.7.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "prophet>=1.3.0",
    "requests-cache>=1.3.0",
    "retry-requests>=2.0.0",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.54.0",
    "tensorflow>=2.20.0",
    "xgboost>=3.2.0",
]
